# rust-krc-to-lrc

./: 2.krc  3.krc  Cargo.toml  LICENSE  README.md
src/: krc_to_lrc.rs  main.rs  tests.rs
